# HomeWork

./: .env  .env.example  README.md  main.py  pyproject.toml
src/: count.py  decorators.py  external_api.py  filters.py  generators.py  masks.py  operations.py  processing.py  readers.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_readers.py  test_utils.py  test_widget.py
